--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,27 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/nav_home"
         android:icon="@drawable/ic_home_black_24dp"
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_opportunities"
+        android:id="@+id/nav_opportunities"
         android:icon="@drawable/ic_opportunities_black_24dp"
         android:title="@string/title_opportunities" />
 
     <item
-        android:id="@+id/navigation_applications"
+        android:id="@+id/nav_applications"
         android:icon="@drawable/ic_applications_black_24dp"
         android:title="@string/title_applications" />
 
     <item
-        android:id="@+id/navigation_saved"
+        android:id="@+id/nav_saved"
         android:icon="@drawable/ic_saved_black_24dp"
         android:title="@string/title_saved" />
 
     <item
-        android:id="@+id/navigation_profile"
+        android:id="@+id/nav_profile"
         android:icon="@drawable/ic_profile_black_24dp"
         android:title="@string/title_profile" />
 </menu>
