--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -41,7 +41,7 @@
 
     <fragment
         android:id="@+id/nav_applications"
-        android:name="com.example.vohoportunitysconect.ui.applications.ApplicationsFragment"
+        android:name="com.example.vohoportunitysconect.fragments.ApplicationsFragment"
         android:label="@string/applications"
         tools:layout="@layout/fragment_applications" />
 
