Update opportunities UI and fix Firebase connection issues

--- a/app/src/main/res/layout/fragment_opportunities.xml
+++ b/app/src/main/res/layout/fragment_opportunities.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraint_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -63,6 +64,26 @@
             android:padding="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/filter_chip_group" />
+        <LinearLayout
+            android:id="@+id/mainContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp">
+
+                <GridLayout
+                    android:id="@+id/resultsContainer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="16dp">
+                </GridLayout>
+            </ScrollView>
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/error_container"
