--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,18 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/nav_home">
+    app:startDestination="@id/opportunitiesFragment">
+
+    <fragment
+        android:id="@+id/opportunitiesFragment"
+        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunitiesFragment"
+        android:label="Opportunities"
+        tools:layout="@layout/fragment_opportunities">
+        <action
+            android:id="@+id/action_opportunitiesFragment_to_opportunityDetailsFragment"
+            app:destination="@id/opportunityDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/opportunityDetailsFragment"
+        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunityDetailsFragment"
+        android:label="Opportunity Details"
+        tools:layout="@layout/fragment_opportunity_details">
+        <argument
+            android:name="opportunity_id"
+            app:argType="string" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/savedOpportunitiesFragment"
+        android:name="com.example.vohoportunitysconect.ui.saved.SavedOpportunitiesFragment"
+        android:label="Saved Opportunities"
+        tools:layout="@layout/fragment_saved_opportunities">
+        <action
+            android:id="@+id/action_savedOpportunitiesFragment_to_opportunityDetailsFragment"
+            app:destination="@id/opportunityDetailsFragment" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/myApplicationsFragment"
+        android:name="com.example.vohoportunitysconect.ui.applications.MyApplicationsFragment"
+        android:label="My Applications"
+        tools:layout="@layout/fragment_my_applications">
+        <action
+            android:id="@+id/action_myApplicationsFragment_to_opportunityDetailsFragment"
+            app:destination="@id/opportunityDetailsFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/nav_home"
         android:name="com.example.vohoportunitysconect.ui.home.HomeFragment"
         android:label="Home" />
-
-    <fragment
-        android:id="@+id/nav_opportunities"
-        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunitiesFragment"
-        android:label="Opportunities" />
 
     <fragment
         android:id="@+id/nav_applications"
@@ -28,9 +64,4 @@
         android:id="@+id/nav_profile"
         android:name="com.example.vohoportunitysconect.ui.profile.ProfileFragment"
         android:label="Profile" />
-
-    <fragment
-        android:id="@+id/nav_opportunity_details"
-        android:name="com.example.vohoportunitysconect.ui.opportunities.OpportunityDetailsFragment"
-        android:label="Opportunity Details" />
 </navigation> 
