--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- Base application theme -->
-    <style name="Base.Theme.VOHoportunitysconect" parent="Theme.MaterialComponents.DayNight">
+    <style name="Base.Theme.VOHoportunitysconect" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/primary_dark</item>
-        <item name="colorAccent">@color/accent</item>
-        <item name="android:windowBackground">@color/background</item>
-        <item name="android:textColorPrimary">@color/text_primary</item>
-        <item name="android:textColorSecondary">@color/text_secondary</item>
-        <!-- Status bar color -->
-        <item name="android:statusBarColor">@color/primary_dark</item>
+        <item name="colorPrimaryVariant">@color/primary_dark</item>
+        <item name="colorOnPrimary">@color/white</item>
+        <item name="colorSecondary">@color/accent</item>
+        <item name="colorSecondaryVariant">@color/primary_darker</item>
+        <item name="colorOnSecondary">@color/white</item>
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:icon">@drawable/ic_heart_white</item>
+        <item name="android:roundIcon">@drawable/ic_heart_white</item>
         <!-- Shape appearance -->
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.App.SmallComponent</item>
         <item name="shapeAppearanceMediumComponent">@style/ShapeAppearance.App.MediumComponent</item>
         <item name="shapeAppearanceLargeComponent">@style/ShapeAppearance.App.LargeComponent</item>
-        <!-- App icon -->
-        <item name="android:icon">@drawable/ic_heart_white</item>
-        <item name="android:roundIcon">@drawable/ic_heart_white</item>
     </style>
 
     <!-- Main application theme -->
@@ -27,9 +25,8 @@
     </style>
 
     <!-- Action Bar style -->
-    <style name="AppActionBar" parent="Widget.MaterialComponents.ActionBar.Solid">
+    <style name="AppActionBar" parent="Widget.AppCompat.ActionBar">
         <item name="android:icon">@drawable/ic_heart_white</item>
-        <item name="icon">@drawable/ic_heart_white</item>
     </style>
 
     <!-- No Action Bar theme -->
@@ -55,8 +52,21 @@
     </style>
 
     <!-- Circle ImageView style -->
-    <style name="CircleImageView" parent="">
+    <style name="CircleImageView">
+        <item name="android:scaleType">centerCrop</item>
+        <item name="android:adjustViewBounds">true</item>
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
+    </style>
+
+    <!-- Material Design Chip Styles -->
+    <style name="Widget.MaterialComponents.Chip.Info" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/primary_light</item>
+        <item name="android:textColor">@color/primary_dark</item>
+    </style>
+
+    <style name="Widget.MaterialComponents.Chip.Suggestion" parent="Widget.MaterialComponents.Chip.Action">
+        <item name="chipBackgroundColor">@color/accent</item>
+        <item name="android:textColor">@color/white</item>
     </style>
 </resources>
