--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,37 +3,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:id="@+id/group_main">
+    <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/title_home" />
+            android:id="@+id/opportunitiesFragment"
+            android:icon="@drawable/ic_opportunities"
+            android:title="@string/opportunities" />
         <item
-            android:id="@+id/nav_opportunities"
-            android:icon="@drawable/ic_opportunities_black_24dp"
-            android:title="@string/title_opportunities" />
+            android:id="@+id/savedOpportunitiesFragment"
+            android:icon="@drawable/ic_bookmark"
+            android:title="@string/saved" />
         <item
-            android:id="@+id/nav_applications"
-            android:icon="@drawable/ic_applications_black_24dp"
-            android:title="@string/title_applications" />
-        <item
-            android:id="@+id/nav_saved"
-            android:icon="@drawable/ic_saved_black_24dp"
-            android:title="@string/title_saved" />
-    </group>
-
-    <group android:id="@+id/group_settings">
+            android:id="@+id/myApplicationsFragment"
+            android:icon="@drawable/ic_applications"
+            android:title="@string/applications" />
         <item
             android:id="@+id/nav_profile"
-            android:icon="@drawable/ic_profile_black_24dp"
-            android:title="@string/title_profile" />
-        <item
-            android:id="@+id/nav_settings"
-            android:icon="@drawable/ic_settings_black_24dp"
-            android:title="@string/title_settings" />
-        <item
-            android:id="@+id/nav_logout"
-            android:icon="@drawable/ic_logout_black_24dp"
-            android:title="@string/title_logout" />
+            android:icon="@drawable/ic_profile"
+            android:title="@string/profile" />
     </group>
+
+    <item android:title="@string/account">
+        <menu>
+            <item
+                android:id="@+id/nav_logout"
+                android:icon="@drawable/ic_logout"
+                android:title="@string/title_logout" />
+        </menu>
+    </item>
+
 </menu> 
