--- a/app/src/main/res/layout/item_application.xml
+++ b/app/src/main/res/layout/item_application.xml
@@ -14,14 +14,6 @@
         android:orientation="horizontal"
         android:padding="16dp">
 
-        <ImageView
-            android:id="@+id/organization_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/placeholder_organization"
-            tools:src="@tools:sample/backgrounds/scenic" />
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -62,8 +54,19 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:textColor="@color/white"
-                app:chipBackgroundColor="@color/status_pending" />
+                app:chipBackgroundColor="@color/status_pending"
+                app:chipMinHeight="32dp" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/cancel_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cancel"
+                android:textColor="@color/white"
+                app:backgroundTint="@color/error"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
         </LinearLayout>
 
