--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,5 +70,6 @@
     <color name="selection_dark">#BBDEFB</color>
     <color name="selection_light">#F5F5F5</color>
     <color name="urgent_red">#FFE53935</color>
+    <color name="orange">#FFA500</color>
 </resources>
    
